(ticket: 1) Added view, template and syles for personal page

--- a/msizenko_42cc/templates/base.html
+++ b/msizenko_42cc/templates/base.html
@@ -4,6 +4,10 @@
 <head>
     <title>{% block head_title %}{% endblock %}</title>
     <meta charset=utf-8 />
+    <link rel="stylesheet" href="/static/css/style.css" />
+    <!--[if lt IE 9]>
+        <script type="text/javascript" src="/media/js/fixes/ie-html5.js"></script>
+    <![endif]-->
 </head>
 <body>
 
