(ticket: 5) Added error check for login form. Fixing bug - person contacts not need pass to response

--- a/msizenko_42cc/static/css/main.css
+++ b/msizenko_42cc/static/css/main.css
@@ -56,6 +56,11 @@
     line-height: 1.5em;
 }
 
+.errors {
+    padding: .5em;
+    border: 1px solid red;
+}
+
 #login-form p{
     margin: .5em 0;
 }
