--- a/msizenko_42cc/templates/assignment/login.html
+++ b/msizenko_42cc/templates/assignment/login.html
@@ -11,6 +11,10 @@
 {% block header %}Welcome{% endblock %}    
 
 {% block content %} 
+    {% if form.errors %}
+        <p class="errors">Your username and password didn’t match. Please try again.</p>
+    {% endif %}
+
     <form id="login-form" action={% url django.contrib.auth.views.login %} method="post">
         {% csrf_token %}
         <p>
