--- a/msizenko_42cc/templates/assignment/log.html
+++ b/msizenko_42cc/templates/assignment/log.html
@@ -5,6 +5,7 @@
 {% block menu %}
     <a href="{% url assignment-index %}">main</a>
     {% if user.is_authenticated %}
+        <a href="{% url assignment-person-edit %}">edit</a>        
         <a href="{% url assignment-logout %}">logout</a>    
     {% else %}    
         <a href="{% url assignment-login %}">login</a>                
