--- a/msizenko_42cc/templates/base.html
+++ b/msizenko_42cc/templates/base.html
@@ -27,5 +27,8 @@
         {% endblock %}
     </div>
 </div>
+{% block scripts %}
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+{% endblock %}
 </body>
 </html>
