(ticket: 6) Added calendar widget, sanding person edit form via ajax

--- a/msizenko_42cc/templates/assignment/index.html
+++ b/msizenko_42cc/templates/assignment/index.html
@@ -24,7 +24,7 @@
                         {{ person.userprofile.photo.url }}
                     {% else %}        
                         {% load staticfiles %}
-                        {% static 'images/profile.jpg' %}
+                        {% static 'css/images/profile.jpg' %}
                     {% endif %}    
                 " />
     </div>
