--- a/msizenko_42cc/templates/assignment/person_edit.html
+++ b/msizenko_42cc/templates/assignment/person_edit.html
@@ -4,6 +4,8 @@
 
 {% block menu %}
     <a href="{% url assignment-request-log %}">request's list</a>
+    {% load edit_link from assignment_edit_link %}
+    {% edit_link user "user admin" %}
     <a href="{% url assignment-index %}">main</a>    
     <a href="{% url assignment-logout %}">logout</a>    
 {% endblock %}
