(ticket: 13) Added priority header and up-down arrow

--- a/msizenko_42cc/templates/assignment/log.html
+++ b/msizenko_42cc/templates/assignment/log.html
@@ -23,7 +23,14 @@
         <table  id="request-list">
             <thead>
                 <tr>
-                    <th><a href="?priority={{ priority }}"></th>
+                    <th><a href="?priority={{ priority }}">Priority
+                        {% if priority == 'priority' %}
+                            &darr;
+                        {% else %}
+                            &uarr;
+                        {% endif %}
+                        </a>
+                    </th>
                     <th>Date</th>
                     <th>Method</th>
                     <th>Path</th>
